{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 152,
  "lineage": "2c629264-e9a2-dba9-5375-f6cb35a42993",
  "resources": [
    {
      "module": "module.main-eks",
      "mode": "data",
      "type": "aws_route_table",
      "name": "all_private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-035ad9d12298c4d9d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111594127594:route-table/rtb-09788fef3e59fc700",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01f1cecd667252599",
                "route_table_id": "rtb-09788fef3e59fc700",
                "subnet_id": "subnet-035ad9d12298c4d9d"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-09788fef3e59fc700",
            "owner_id": "111594127594",
            "route_table_id": "rtb-09788fef3e59fc700",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.0/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.16/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.32/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.194.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.194.128/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.195.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f08888a7e2f3e38c",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ccd818ec2c3c92a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "pl-083163c5ce3f79e76",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f08888a7e2f3e38c",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-035ad9d12298c4d9d",
            "tags": {
              "Automated": "true",
              "Name": "batcave-east-impl-private-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e9130e3c54083f1"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "subnet-0a9ffecd6d6b5f938",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111594127594:route-table/rtb-0e59dc27752d6de9d",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0c53322bdb248d38a",
                "route_table_id": "rtb-0e59dc27752d6de9d",
                "subnet_id": "subnet-0a9ffecd6d6b5f938"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0e59dc27752d6de9d",
            "owner_id": "111594127594",
            "route_table_id": "rtb-0e59dc27752d6de9d",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.0/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.16/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.32/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.194.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.194.128/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.195.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f08888a7e2f3e38c",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d4282033ba6665a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "pl-083163c5ce3f79e76",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f08888a7e2f3e38c",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0a9ffecd6d6b5f938",
            "tags": {
              "Automated": "true",
              "Name": "batcave-east-impl-private-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e9130e3c54083f1"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "subnet-0fc274cdc0d0c62d9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111594127594:route-table/rtb-0de7775cbec6c2f5c",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0230d289c2d3cb7b7",
                "route_table_id": "rtb-0de7775cbec6c2f5c",
                "subnet_id": "subnet-0fc274cdc0d0c62d9"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0de7775cbec6c2f5c",
            "owner_id": "111594127594",
            "route_table_id": "rtb-0de7775cbec6c2f5c",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.0/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.16/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.223.167.32/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.194.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.194.128/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.148.195.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01f6ddb26b26a658e"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f08888a7e2f3e38c",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051fd8eddfc08e588",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "pl-083163c5ce3f79e76",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f08888a7e2f3e38c",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0fc274cdc0d0c62d9",
            "tags": {
              "Automated": "true",
              "Name": "batcave-east-impl-private-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e9130e3c54083f1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main-eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111594127594:vpc/vpc-09e9130e3c54083f1",
            "cidr_block": "10.149.116.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03905967f698e5970",
                "cidr_block": "10.149.116.0/23",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-09318d744b265e295",
                "cidr_block": "100.87.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0f75d0b112bac7bb2",
                "cidr_block": "10.223.173.128/26",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0da2c5ce3cd67f361",
                "cidr_block": "10.203.154.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e7abb885b2b89bb1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e9130e3c54083f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b90fc02f0747421",
            "owner_id": "111594127594",
            "tags": {
              "Automated": "true",
              "Name": "batcave-east-impl",
              "stack": "impl"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress_additional_prefix_lists",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow_ingress_additional_prefix_lists",
            "from_port": 0,
            "id": "sgrule-2514896669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-006315be223e9c9a7",
              "pl-01cd239fc89e69618",
              "pl-0a4dde74506ba8a8f",
              "pl-021a6f9575cc1b686"
            ],
            "protocol": "-1",
            "security_group_id": "sg-0d33a5338beac132e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_caller_identity.current",
            "module.main-eks.data.aws_ec2_managed_prefix_list.cmscloud_security_tools",
            "module.main-eks.data.aws_ec2_managed_prefix_list.cmscloud_shared_services_pl",
            "module.main-eks.data.aws_ec2_managed_prefix_list.vpn_prefix_list",
            "module.main-eks.data.aws_ec2_managed_prefix_list.zscaler_pl",
            "module.main-eks.data.aws_partition.current",
            "module.main-eks.data.aws_subnets.private",
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.cloudwatch_kms.aws_kms_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_key.this",
            "module.main-eks.module.cloudwatch_kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.aws_cloudwatch_log_group.this",
            "module.main-eks.module.eks.aws_eks_cluster.this",
            "module.main-eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.main-eks.module.eks.aws_iam_role.this",
            "module.main-eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node",
            "module.main-eks.module.eks.aws_security_group_rule.cluster",
            "module.main-eks.module.eks.aws_security_group_rule.node",
            "module.main-eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.main-eks.module.eks.data.aws_iam_session_context.current",
            "module.main-eks.module.eks.data.aws_partition.current",
            "module.main-eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.main-eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.main-eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.module.kms.data.aws_partition.current"
          ]
        },
        {
          "index_key": "cluster_primary",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow_ingress_additional_prefix_lists",
            "from_port": 0,
            "id": "sgrule-43458042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-006315be223e9c9a7",
              "pl-01cd239fc89e69618",
              "pl-0a4dde74506ba8a8f",
              "pl-021a6f9575cc1b686"
            ],
            "protocol": "-1",
            "security_group_id": "sg-0c9daf0e7276ab90d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_caller_identity.current",
            "module.main-eks.data.aws_ec2_managed_prefix_list.cmscloud_security_tools",
            "module.main-eks.data.aws_ec2_managed_prefix_list.cmscloud_shared_services_pl",
            "module.main-eks.data.aws_ec2_managed_prefix_list.vpn_prefix_list",
            "module.main-eks.data.aws_ec2_managed_prefix_list.zscaler_pl",
            "module.main-eks.data.aws_partition.current",
            "module.main-eks.data.aws_subnets.private",
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.cloudwatch_kms.aws_kms_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_key.this",
            "module.main-eks.module.cloudwatch_kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.aws_cloudwatch_log_group.this",
            "module.main-eks.module.eks.aws_eks_cluster.this",
            "module.main-eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.main-eks.module.eks.aws_iam_role.this",
            "module.main-eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node",
            "module.main-eks.module.eks.aws_security_group_rule.cluster",
            "module.main-eks.module.eks.aws_security_group_rule.node",
            "module.main-eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.main-eks.module.eks.data.aws_iam_session_context.current",
            "module.main-eks.module.eks.data.aws_partition.current",
            "module.main-eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.main-eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.main-eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.module.kms.data.aws_partition.current"
          ]
        },
        {
          "index_key": "node",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow_ingress_additional_prefix_lists",
            "from_port": 0,
            "id": "sgrule-496274729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-006315be223e9c9a7",
              "pl-01cd239fc89e69618",
              "pl-0a4dde74506ba8a8f",
              "pl-021a6f9575cc1b686"
            ],
            "protocol": "-1",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_caller_identity.current",
            "module.main-eks.data.aws_ec2_managed_prefix_list.cmscloud_security_tools",
            "module.main-eks.data.aws_ec2_managed_prefix_list.cmscloud_shared_services_pl",
            "module.main-eks.data.aws_ec2_managed_prefix_list.vpn_prefix_list",
            "module.main-eks.data.aws_ec2_managed_prefix_list.zscaler_pl",
            "module.main-eks.data.aws_partition.current",
            "module.main-eks.data.aws_subnets.private",
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.cloudwatch_kms.aws_kms_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_key.this",
            "module.main-eks.module.cloudwatch_kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.aws_cloudwatch_log_group.this",
            "module.main-eks.module.eks.aws_eks_cluster.this",
            "module.main-eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.main-eks.module.eks.aws_iam_role.this",
            "module.main-eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node",
            "module.main-eks.module.eks.aws_security_group_rule.cluster",
            "module.main-eks.module.eks.aws_security_group_rule.node",
            "module.main-eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.main-eks.module.eks.data.aws_iam_session_context.current",
            "module.main-eks.module.eks.data.aws_partition.current",
            "module.main-eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.main-eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.main-eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.main-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-tg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3561883513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-06bd12a93b1b4125f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.main-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-vpc-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.149.116.0/23",
              "100.87.0.0/16",
              "10.223.173.128/26",
              "10.203.154.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3357413386",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9daf0e7276ab90d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_caller_identity.current",
            "module.main-eks.data.aws_partition.current",
            "module.main-eks.data.aws_subnets.private",
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.cloudwatch_kms.aws_kms_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.cloudwatch_kms.aws_kms_replica_key.this",
            "module.main-eks.module.cloudwatch_kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.aws_cloudwatch_log_group.this",
            "module.main-eks.module.eks.aws_eks_cluster.this",
            "module.main-eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.main-eks.module.eks.aws_iam_role.this",
            "module.main-eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node",
            "module.main-eks.module.eks.aws_security_group_rule.cluster",
            "module.main-eks.module.eks.aws_security_group_rule.node",
            "module.main-eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.main-eks.module.eks.data.aws_iam_session_context.current",
            "module.main-eks.module.eks.data.aws_partition.current",
            "module.main-eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.main-eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.main-eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.main-eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.main-eks.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.main-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111594127594:security-group/sg-0d33a5338beac132e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d33a5338beac132e",
            "ingress": [],
            "name": "eks-hema-test-cluster-sg-20240614184751120400000001",
            "name_prefix": "eks-hema-test-cluster-sg-",
            "owner_id": "111594127594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-hema-test-cluster-sg"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Name": "eks-hema-test-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e9130e3c54083f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.main-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111594127594:security-group/sg-00e5524775dcc9d44",
            "description": "Security group for EKS nodes",
            "egress": [],
            "id": "sg-00e5524775dcc9d44",
            "ingress": [],
            "name": "eks-hema-test-node-sg",
            "name_prefix": "",
            "owner_id": "111594127594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-hema-test-node-sg",
              "kubernetes.io/cluster/hema-test": "owned"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Name": "eks-hema-test-node-sg",
              "kubernetes.io/cluster/hema-test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e9130e3c54083f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.main-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-92344493",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d33a5338beac132e",
            "security_group_rule_id": "sgr-054b45802ab2450ce",
            "self": false,
            "source_security_group_id": "sg-00e5524775dcc9d44",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.main-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-294299937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-0b48c4b1a0b9f80ae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2048569793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-08b5adc6886f9537e",
            "self": false,
            "source_security_group_id": "sg-0d33a5338beac132e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2851739082",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-089f520292a1c8ca0",
            "self": false,
            "source_security_group_id": "sg-0d33a5338beac132e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1622700636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-0fc7fe45d2c6b56da",
            "self": false,
            "source_security_group_id": "sg-0d33a5338beac132e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1944342141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-09d3589cb61099251",
            "self": false,
            "source_security_group_id": "sg-0d33a5338beac132e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-390430134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-0760f2bb5e8459fb1",
            "self": false,
            "source_security_group_id": "sg-0d33a5338beac132e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-550743966",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-04fbeddb400ed210c",
            "self": false,
            "source_security_group_id": "sg-0d33a5338beac132e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-486005872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-0cbe60ce741dde1e1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1032683817",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-09a27843b32d3fecf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2580685510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00e5524775dcc9d44",
            "security_group_rule_id": "sgr-03cebf3a925c24f4a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-eks.data.aws_vpc.vpc",
            "module.main-eks.module.eks.aws_security_group.cluster",
            "module.main-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}